# playground

./: .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  README.md
curl-download/: CMakeLists.txt  README.md
curl-download/include/: download.h  fetch.h
curl-download/src/: download.c  fetch.c  main.c
curl-download/test-src/: curl_environment.cpp  test_download.cpp  test_fetch.cpp
curl-download/test-src/net/: http_server.cpp  http_server.hpp  socket.cpp  socket.hpp  socketpair.cpp  socketpair.hpp
dbus-example/: CMakeLists.txt  README.md  greeter.xml
dbus-example/src/client/: main.c
dbus-example/src/service/: main.c
embed-resources/: CMakeLists.txt  README.md
embed-resources/src/: main.cc
find-in-files/: CMakeLists.txt  READDIR.md
find-in-files/src/: filewalker.c  filewalker.h  main.c  path.c  path.h
include/base64/: base64.h
include/cli/: app.hpp  argument.hpp  arguments.hpp  cli.hpp
include/openssl++/: base64.hpp  basic_io.hpp  bio.hpp  certificate.hpp  cms.hpp  exception.hpp  init.hpp  openssl++.hpp  private_key.hpp
lib/: certificate.cc  cms.cc  exception.cc  init.cc  private_key.cc
lib/base64/: base64.c
lib/cli/: app.cc  argument.cc  arguments.cc  options.cc  options.hpp
lib/openssl++/: base64.cc  basic_io.cc  bio.cc  certificate.cc  cms.cc  exception.cc  private_key.cc
libarchive-example/: CMakeLists.txt  README.md
libarchive-example/src/: main.c
mmap-file/: CMakeLists.txt  README.md
mmap-file/src/: buffered.c  main.c  md5.c  md5.h  mmap.c  readall.c  strategy.c  strategy.h
openssl-examples/: CMakeLists.txt  README.md
openssl-examples/src/: cms_info.cc  cms_sign.cc
password-utils/: CMakeLists.txt  README.md
password-utils/src/: create_password_hash.c  dump_passwd.c  is_password_expired.c
pidfd-open/: CMakeLists.txt  README.md
pidfd-open/include/: pidfd_open.h
pidfd-open/src/: main.c  pidfd_open.c
png-example/: CMakeLists.txt  README.md
png-example/src/: png_image.c
popen-example/: .gitignore  AUTHORS  CMakeLists.txt
src/: cms_info.cc  cms_sign.c  cms_sign.cc  cms_verify.cc  image.h  main.c  png_image.c
virtual-webcam/: CMakeLists.txt  README.md
virtual-webcam/src/: main.c  png_image.c  put_image.c  video_info.c
virtual-webcam/src/put_image/: main.c
virtual-webcam/src/util/: put_image.c  put_image.h
virtual-webcam/src/video_info/: main.c
virtual-webcam/src/vmenu/: item_list.c  item_list.h  main.c
virtual-webcam/src/vstream/: image.h  video_stream.c  video_stream.h  yuv.c  yuv.h
virtual-webcam/www/: index.html
walk-directory/: CMakeLists.txt  README.md
walk-directory/src/: ftw.c  main.c  readdir.c  strategies.h  walk_directory.c  walk_directory.h
